--- a/CSS/15.position.html
+++ b/CSS/15.position.html
@@ -12,6 +12,7 @@
         .relative2 {position: relative; width: 400px; height: 200px; border: 3px solid #73AD21;}
         .absolute {position: absolute; top: 80px; right: 0; width: 200px; height: 100px; border: 3px solid #73AD21;}
         .sticky {position: -webkit-sticky; /* Safari */ position: sticky; top: 0; background-color: green; border: 2px solid #4CAF50;}
+        .top-left {position: absolute; top: 8px; left: 16px;}
     </style>
 </head>
 <body style="margin: 40px; height: 2000px;">
@@ -32,5 +33,9 @@
         </div>
     </div>
     <div class="sticky">I am sticky!</div>
+    <div class="relative">
+        <img src="https://picsum.photos/600/300" alt="임의의 사진" style="opacity: 0.3;">
+        <div class="top-left">Top left</div>
+    </div>
 </body>
 </html>
