--- a/BOOTSTRAP/999.자기소개.html
+++ b/BOOTSTRAP/999.자기소개.html
@@ -2,22 +2,17 @@
 <html lang="en">
 
 <head>
-	<title>Bootstrap 5 Example</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://kit.fontawesome.com/a18034e305.js" crossorigin="anonymous"></script>
 </head>
 
+
 <body>
-	<div class="container-fluid p-5 bg-primary text-white text-center">
-		<h1>Container</h1>
-		<p>Resize this responsive page to see the effect!</p>
-	</div>
+	
 
-	<div class="container mt-5">
-
-	</div>
 </body>
 
 </html>
