--- a/BOOTSTRAP/32.일정표.html
+++ b/BOOTSTRAP/32.일정표.html
@@ -16,7 +16,8 @@
 	}
 
 	a {
-		text-decoration: none; color: inherit;
+		text-decoration: none;
+		color: inherit;
 	}
 
 	th {
@@ -113,14 +114,14 @@
 							<td>
 								<div class="d-flex justify-content-between">
 									<div class="text-danger" style="opacity: 0.5;"><strong>
-										<a data-bs-toggle="modal" href="#schedule">30</a></strong></div>
+											<a data-bs-toggle="modal" href="#schedule">30</a></strong></div>
 									<div></div>
 								</div>
 							</td>
 							<td>
 								<div class="d-flex justify-content-between">
 									<div><strong>
-										<a data-bs-toggle="modal" href="#schedule">1</a></strong></div>
+											<a data-bs-toggle="modal" href="#schedule">1</a></strong></div>
 									<div></div>
 								</div>
 							</td>
@@ -356,18 +357,60 @@
 
 				<!-- Modal body -->
 				<div class="modal-body">
-					Modal body..
-				</div>
+					<form action="/schedule" method="get">
+						<div class="my-2">
+							<label for="title" class="form-label">
+								일정명
+								<label class="form-check-label ms-5">
+									<input class="form-check-input" type="checkbox" name="importance"><span class="ms-2">중요</span>
+								</label>
+							</label>
+							<input type="text" class="form-control" name="title" id="title" required>
+						</div>
+						<div class="row">
+							<div class="col-8">
+								<div class="my-2">
+									<label for="sdate" class="form-label">시작일</label>
+									<input type="date" class="form-control" name="sdate" id="sdate" required>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="my-2">
+									<label for="stime" class="form-label">시작시간</label>
+									<input type="time" class="form-control" name="stime" id="stime" required>
+								</div>
+							</div>
+							<div class="col-8">
+								<div class="my-2">
+									<label for="edate" class="form-label">종료일</label>
+									<input type="date" class="form-control" name="edate" id="edate">
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="my-2">
+									<label for="etime" class="form-label">종료시간</label>
+									<input type="time" class="form-control" name="etime" id="etime">
+								</div>
+							</div>
+						</div>
+						<div class="my-2">
+							<label for="place" class="form-label">장소</label>
+							<input type="text" class="form-control" name="place" id="place" required>
+						</div>
+						<div class="my-2">
+							<label for="memo" class="form-label">메모</label>
+							<input type="text" class="form-control" name="memo" id="memo">
+						</div>
+					</form>
 
-				<!-- Modal footer -->
-				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary" data-bs-dismiss="modal">제출</button>
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+					<!-- Modal footer -->
+					<div class="modal-footer">
+						<button type="submit" class="btn btn-primary" data-bs-dismiss="modal">제출</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+					</div>
 				</div>
-
 			</div>
 		</div>
-	</div>
 </body>
 
 </html>
