--- a/BOOTSTRAP/9991.인덱스.html
+++ b/BOOTSTRAP/9991.인덱스.html
@@ -14,10 +14,9 @@
 			font-family: 'Noto Sans KR', sans-serif;
 		}
 
-		.navbar-nav .nav-link {
-			color: white;
-			/* 모든 nav-link의 텍스트 색상을 흰색으로 설정 */
-		}
+		.nav-item:nth-child(1) .nav-link {
+        color: white; /* 첫 번째 nav-item의 nav-link 텍스트 색상을 흰색으로 설정 */
+    }
 	</style>
 </head>
 
