--- a/BOOTSTRAP/17.modal.html
+++ b/BOOTSTRAP/17.modal.html
@@ -31,7 +31,7 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Modal Heading</h4>
+        <h4 class="modal-title">일정명</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
 
