--- a/BOOTSTRAP/0000.평가2.html
+++ b/BOOTSTRAP/0000.평가2.html
@@ -17,22 +17,37 @@
 
 	<div class="container mt-5">
 		<div class="row">
-			<div class="col">
 				<h2>Stacked Form</h2>
 				<form action="#" method="get">
 					<div class="my-3">
-						<label for="uid class="form-label"><strong>사용자 ID</strong></label>
+						<label for="uid" class="form-label"><strong>일정명</strong></label>
 						<input type="text" class="form-control" name="uid" id="uid" placeholder="사용자를 입력하세요." required>
-					</div>
-					<div class="my-3">
-						<label for="pwd" class="form-label"><strong>패스워드</strong></label>
-						<input type="password" class="form-control" name="pwd" id="pwd" placeholder="패스워드를 입력하세요.">
 					</div>
 					<div class="form-check mb-3">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" name="remember"> Remember me
+							<input class="form-check-input" type="checkbox" name="remember">HTML5
+						</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" name="remember">CSS3
+						</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" name="remember">Javascript
+						</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" name="remember">jQuery
+						</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" name="remember">Bootstrap
+						</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" name="remember">React 
 						</label>
 					</div>
+					<div class="my-3">
+						<label for="pwd" class="form-label"><strong>시작일</strong></label>
+						<input type="password" class="form-control" name="pwd" id="pwd" placeholder="패스워드를 입력하세요.">
+					</div>
+					
 					<div class="d-flex justify-content-center">
 						<button type="submit" class="btn btn-primary me-2">제출</button>
 						<button type="submit" class="btn btn-secondary">취소</button>
@@ -40,43 +55,7 @@
 					</div>
 				</form>
 
-			</div>
-			<div class="col">
-				<h2>테이블과 결합된 양식</h2>
-				<form action="/" method="get">
-					<table class="table table-borderless">
-						<tr>
-							<td><label for="uid2" class="col-form-label"><strong>사용자 ID</strong></label></td>
-							<td><input type="text" class="form-control-sm" name="uid2" id="uid2" placeholder="사용자를 입력하세요."></td>
-						</tr>
-						<tr>
-							<td><label for="pwd2" class="col-form-label"><strong>패스워드</strong></label></td>
-							<td><input type="password" class="form-control-sm" name="pwd2" id="pwd2" placeholder="패스워드를 입력하세요."></td>
-						</tr>
-						<tr>
-							<td><label for="comment" class="col-form-label">Comment</label></td>
-							<td><textarea name="comment" rows=3 class="form-control-sm" id="comment"></textarea></td>
-						</tr>
-						<tr>
-							<td colspan="2">
-								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" name="remember"> 사용자ID 기억
-								</label>
-							</td>
-						</tr>
-						<tr>
-							<td colspan="2" style="text-align: center;">
-								<button type="submit" class="btn btn-primary me-2">제출</button>
-								<button type="submit" class="btn btn-secondary">취소</button>
-
-
-							</td>
-						</tr>
-
-					</table>
-				</form>
-
-			</div>
+			
 		</div>
 		<div class="row">
 			<div class="col">
