--- a/JS/챕터4 반복문/10.다이아몬드.html
+++ b/JS/챕터4 반복문/10.다이아몬드.html
@@ -10,6 +10,9 @@
         button {
             padding: 5px;
         }
+        * {
+            font-family: 'Times New Roman', Times, serif;
+        }
     </style>
     <script>
         function drawDiamond() {
